# senac-escola

./: .gitignore  404.html  README.md  index.html  sitemap.xml
.github/workflows/: docs.yml
backend/: pyproject.toml
backend/app/: crud.py  database.py  deps.py  main.py  models.py  schemas.py  utils.py
backend/tests/: test_main.py
configurações/: index.html
database/: docker-compose.yml  escola.sql
documentation/: mkdocs.yml  pyproject.toml
documentation/docs/: configurações.md  index.md  pull-request.md  requisitos.md  requisições.md  testes.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/app/: App.vue
frontend/src/app/components/: Navbar.vue
frontend/src/app/model/: user-type.enum.ts  user.model.ts
frontend/src/app/router/: view.routes.ts
frontend/src/app/services/: http.ts  users-service.ts
frontend/src/app/views/: Login.vue  MyAccount.vue  NotFound.vue
frontend/src/app/views/manager/: AlterarUsuario.vue  ExcluirUsuario.vue  cadastro_usuarios.vue  consultar_usuarios.vue
frontend/src/components/base/: BaseButton.vue  BaseSelect.vue
frontend/src/pages/: Home.vue  cadastro_usuarios.vue  consultar_usuarios.vue
frontend/src/router/: view.routes.ts
frontend/src/styles/: colours.scss  global.scss  style.scss
frontend/src/styles/scss/: variables.scss
frontend/src/views/: Login.vue  NotFound.vue
insomnia/: Insomnia.json
legacy/frontend/: .eslintrc.cjs  package-lock.json
legacy/frontend/src/components/base/: BaseInput.vue
legacy/frontend/src/styles/: global.css
pull-request/: index.html
requisitos/: index.html
requisições/: index.html
search/: search_index.json
testes/: index.html
