[tool.poetry]
name = "escola_backend"
version = "0.1.0"
description = "Backend da aplicação de gestão escolar desenvolvida para o 2ª Etapa do Projeto Integrador IV"
homepage = "https://escola.amandamartins.dev"
repository = "https://github.com/amandamartinsxavier/senac-escola"
documentation = "https://amandamartinsdev.github.io/senac-escola/"
authors = ["Amanda Martins Xavier <hi@amandamartins.dev>"]
license = "GPL-3.0"
readme = "../README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
SQLAlchemy = "^2.0.13"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --port 5010"
prod = "uvicorn app.main:app --host 0.0.0.0"
lint = "blue . && isort ."
pre_test = "task lint"
test = "pytest -s -x --cov=app -vv"
post_test = "coverage html"
